--- a/index.html
+++ b/index.html
@@ -1,12 +1,167 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Глейси</title>
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <title>Gllasy Shop</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <h1 class="visually-hidden">Магазин мороженного "Глейси"</h1>
+  <div class="wrapper">
+    <header class="header">
+      <nav class="header-navigation">
+        <a class="header-logo">
+          <img src="img/logo.svg" width="154" height="64" alt="Логотип магазина Глейси">
+        </a>
+        <ul class="site-navigation">
+          <li><a href="#">Каталог</a></li>
+          <li class="drop-menu">
+            <ul>
+              <li><a href="#">Новинки</a></li>
+              <li><a href="#">Сливочное</a></li>
+              <li><a href="#">Щербеты</a></li>
+              <li><a href="#">Фруктовый лед</a></li>
+              <li><a href="#">Мелорин</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Доставка и оплата</a></li>
+          <li><a href="#">О компании</a></li>
+        </ul>
+        <button type="button" class="header-button search">
+          <p class="visually-hidden">Поиск</p>
+        </button>
+        <button type="button" class="header-button">Вход</button>
+        <button type="button" class="header-button">Пусто</button>
+      </nav>
+      <p class="work-hours">C 10 до 20, ежедневно <br><a href="tel:+88124502525">8 812 450-25-25</a></p>
+    </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    <section class="main-slider">
+      <h2 class="visually-hidden">Акции недели</h2>
+      <div class="slide-1">
+        <img src="img/ice-creame.png" width="647" height="584" alt="Два рожка с мороженым">
+        <p class="slider-title">Крем-брюле и пломбир с малиновым джемом</p>
+        <button type="button" class="content-button slider-button">Давайте оба!</button>
+      </div>
+      <div class="slider-navigation">
+        <button type="button">
+          <p class="visually-hidden">Слайд 1</p>
+        </button>
+        <button type="button">
+          <p class="visually-hidden">Слайд 2</p>
+        </button>
+        <button type="button">
+          <p class="visually-hidden">Слайд 3</p>
+        </button>
+      </div>
+    </section>
 
-  </body>
+    <section class="banners">
+      <h2 class="visually-hidden">Бонусы при заказе</h2>
+      <article class="raspberry">
+        <h3>Малинка даром!</h3>
+        <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+        <button type="button" class="content-button">Хочу варенье!</button>
+      </article>
+      <article class="chocolate">
+        <h3>Шоколадки даром!</h3>
+        <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+        <button type="button" class="content-button">Хочу шоколадки!</button>
+      </article>
+    </section>
+
+    <section class="bestsellers">
+      <h2 class="visually-hidden">Популярные товары</h2>
+      <article class="bestseller">
+        <a href="#">
+          <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+        </a>
+        <span class="price">310 ₽/кг</span>
+        <img src="img/bestseler-1.png" width="267" height="267" alt="Сливочное мороженное с апельсиновым джемом и цитрусовой стружкой">
+      </article>
+      <article class="bestseller">
+        <a href="#">
+          <h3>Сливочно-кофейное с кусочками шоколада</h3>
+        </a>
+        <span class="price">380 ₽/кг</span>
+        <img src="img/bestseler-2.png" width="267" height="267" alt="Сливочно-кофейное мороженное с кусочками шоколада">
+      </article>
+      <article class="bestseller">
+        <a href="#">
+          <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
+        </a>
+        <span class="price">355 ₽/кг</span>
+        <img src="img/bestseler-3.png" width="267" height="267" alt="Сливочно-клубничное мороженное с присыпкой из белого шоколада">
+      </article>
+      <article class="bestseller">
+        <a href="#">
+          <h3>Сливочное крем-брюле с карамельной подливкой</h3>
+        </a>
+        <span class="price">415 ₽/кг</span>
+        <img src="img/bestseler-4.png" width="267" height="267" alt="Сливочное мороженное крем-брюле с карамельной подливкой">
+      </article>
+    </section>
+    <section class="information">
+      <h2>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
+      <div class="information-wrap">
+        <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+        <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+      </div>
+      <div class="information-wrap">
+        <p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+        <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+      </div>
+    </section>
+    <div class="inner-wrap">
+      <section class="blog">
+        <h2>Новое в нашем блоге</h2>
+        <a href="#">10 способов сервировки<br> фруктовых щербетов к<br> столу</a>
+      </section>
+      <section class="subscription">
+        <h2 class="visually-hidden">Подписка на рассылку</h2>
+        <div class="subscription-wrap">
+          <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+          <form class="subscription" action="index.html" method="post">
+            <input type="email" name="user-email" placeholder="email@example.com">
+            <button type="submit">Отправить</button>
+          </form>
+        </div>
+      </section>
+    </div>
+  </div>
+  <section class="map">
+    <h2 class="visually-hidden">Карта и контакты</h2>
+    <div class="contacts">
+      <p>Адрес главного офиса и офлайн-магазина:</p>
+      <address>ул. Большая Конюшенная 19/8, Санкт-Петербург</address>
+      <p>
+        Для заказов по телефону:
+        <a href="tel:+88124502525">8 812 450-25-25</a>
+        (с 10 до 20 ежедневно)
+      </p>
+      <button type="button" class="content-button">Форма обратной связи</button>
+    </div>
+  </section>
+  <footer class="footer">
+    <ul class="social-links">
+      <li><a href="#">Twitter</a></li>
+      <li><a href="#">Insta</a></li>
+      <li><a href="#">Fb</a></li>
+      <li><a href="#">Vk</a></li>
+    </ul>
+    <div class="footer-navigation">
+      <ul class="footer-info">
+        <li><a href="#">Для поставщиков</a></li>
+        <li><a href="#">О производстве</a></li>
+      </ul>
+      <ul class="footer-documents">
+        <li><a href="#">Наши документы</a></li>
+        <li><a href="#">Экогологические стандарты</a></li>
+      </ul>
+    </div>
+    <p class="copyright">Сделано в <a href="#">HTML Academy</a> © 2019</p>
+  </footer>
+</body>
 </html>
