--- a/index.html
+++ b/index.html
@@ -16,33 +16,36 @@
           <img src="img/logo.svg" width="154" height="64" alt="Логотип магазина Глейси">
         </a>
         <ul class="site-navigation">
-          <li class="drop-menu-link"><a href="#">Каталог</a></li>
-          <li class="drop-menu">
-            <ul>
-              <li><a href="#">Новинки</a></li>
-              <li><a href="#">Сливочное</a></li>
-              <li><a href="#">Щербеты</a></li>
-              <li><a href="#">Фруктовый лед</a></li>
-              <li><a href="#">Мелорин</a></li>
-            </ul>
+          <li>
+            <a href="#" class="drop-menu-link">Каталог</a>
+            <div class="drop-menu-wrapper">
+              <ul class="drop-menu">
+                <li><a href="#">Новинки</a></li>
+                <li><a href="#">Сливочное</a></li>
+                <li><a href="#">Щербеты</a></li>
+                <li><a href="#">Фруктовый лед</a></li>
+                <li><a href="#">Мелорин</a></li>
+              </ul>
+            </div>
           </li>
           <li><a href="#">Доставка и оплата</a></li>
           <li><a href="#">О Компании</a></li>
         </ul>
-        <button type="button" class="header-button search">
+        <a href="#" class="header-button search">
           <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17px" height="17px" viewBox="0 0 17 17" enable-background="new 0 0 17 17" xml:space="preserve">
             <g id="Layer_2">
               <path d="M16.958,15.527L11.75,10.32C12.533,9.247,13,7.93,13,6.5C13,2.91,10.09,0,6.5,0S0,2.91,0,6.5S2.91,13,6.5,13c1.438,0,2.763-0.473,3.839-1.263l5.205,5.204L16.958,15.527z M6.5,11C4.019,11,2,8.981,2,6.5S4.019,2,6.5,2S11,4.019,11,6.5S8.981,11,6.5,11z"/>
             </g>
           </svg>
           <p class="visually-hidden">Поиск</p>
-        </button>
+        </a>
         <div class="header-search">
           <form class="header-search-form" action="index.html" method="post">
-            <input type="search" placeholder="Крем-брюле">
+            <label for="search-line" class="visually-hidden">Поиск</label>
+            <input type="search" id="search-line" placeholder="Крем-брюле">
           </form>
         </div>
-        <button type="button" class="header-button login">
+        <a href="#" type="button" class="header-button login">
           <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21px" height="19px" viewBox="0 0 21 19" enable-background="new 0 0 21 19" xml:space="preserve">
             <g>
               <polygon points="6,14.875 12.917,9.5 6,4.125 6,7.042 -0.042,7.042 -0.042,11.959 6,11.959"/>
@@ -50,17 +53,19 @@
             </g>
           </svg>
           Вход
-        </button>
+        </a>
         <div class="header-login">
           <form class="header-login-form" action="index.html" method="post">
-            <input type="email" placeholder="mail@example.com">
-            <input type="password" placeholder="password">
+            <label for="login-email" class="visually-hidden">Введите свой электронный адрес</label>
+            <input type="email" id="login-email" placeholder="mail@example.com">
+            <label for="password">Ваш пароль</label>
+            <input type="password" id="password" placeholder="password">
             <button type="submit" class="content-button">Войти</button>
             <a href="#">Забыли пароль?</a>
             <a href="#">Новая регистрация</a>
           </form>
         </div>
-        <button type="button" class="header-button basket">
+        <a href="#" type="button" class="header-button basket">
           <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21px" height="20px" viewBox="0 0 21 20" enable-background="new 0 0 21 20" xml:space="preserve">
             <g>
               <path d="M5.657,2.031L5.422,0H0v2h3.64l1.5,13h13.988l1.699-12.969H5.657z M17.372,13H6.922L5.888,4.031h12.66L17.372,13z"/>
@@ -69,26 +74,28 @@
             </g>
           </svg>
           Пусто
-        </button>
+        </a>
       </nav>
       <p class="work-hours">C 10 до 20, ежедневно <br><a href="tel:+88124502525">8 812 450-25-25</a></p>
     </header>
 
     <section class="main-slider">
       <h2 class="visually-hidden">Акции недели</h2>
-      <div class="slide slide-1 ">
+      <div class="slide slide-1 active">
         <img src="img/ice-creame.png" width="1045" height="881" alt="Два рожка с мороженым">
         <p class="slider-title">Крем-брюле и пломбир <span>с малиновым джемом</span></p>
+        <a href="#" type="button" class="content-button slider-button">Давайте оба!</a>
       </div>
-      <div class="slide slide-2 ">
+      <div class="slide slide-2">
         <img src="img/ice-creame-2.png" width="1045" height="843" alt="Два рожка с мороженым">
         <p class="slider-title">Шоколадный пломбир и лимонный сорбет</p>
+        <a href="#" type="button" class="content-button slider-button">Давайте оба!</a>
       </div>
-      <div class="slide slide-3 active">
+      <div class="slide slide-3">
         <img src="img/ice-creame-3.png" width="1045" height="827" alt="Два рожка с мороженым">
         <p class="slider-title">Пломбир с помадкой<br> и клубничный щербет</p>
+        <a href="#" type="button" class="content-button slider-button">Давайте оба!</a>
       </div>
-      <button type="button" class="content-button slider-button">Давайте оба!</button>
       <div class="slider-navigation">
         <button type="button" class="slide-1-button active">
           <p class="visually-hidden">Слайд 1</p>
@@ -107,40 +114,43 @@
       <article class="raspberry">
         <h3>Малинка даром!</h3>
         <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-        <button type="button" class="content-button">Хочу варенье!</button>
+        <a href="#" type="button" class="content-button banner-link">Хочу варенье!</a>
       </article>
       <article class="chocolate">
         <h3>Шоколадки даром!</h3>
         <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-        <button type="button" class="content-button">Хочу шоколадки!</button>
+        <a href="#" type="button" class="content-button banner-link">Хочу шоколадки!</a>
       </article>
     </section>
 
     <section class="bestsellers">
       <h2 class="visually-hidden">Популярные товары</h2>
-      <article class="bestseller">
+      <article class="catalog-item bestseller">
         <a href="#">
           <h3>Сливочное с апельсиновым<br> джемом и цитрусовой стружкой</h3>
         </a>
         <span class="price">310 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
         <img src="img/bestseler-1.png" width="267" height="267" alt="Сливочное мороженное с апельсиновым джемом и цитрусовой стружкой">
-
+        <a href="#" class="content-button item-link">Быстрый просмотр</a>
       </article>
-      <article class="bestseller">
+
+      <article class="catalog-item bestseller">
         <a href="#">
           <h3>Сливочно-кофейное с кусочками шоколада</h3>
         </a>
         <span class="price">380 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
         <img src="img/bestseler-2.png" width="267" height="267" alt="Сливочно-кофейное мороженное с кусочками шоколада">
       </article>
-      <article class="bestseller">
+
+      <article class="catalog-item bestseller">
         <a href="#">
           <h3>Сливочно-клубничное с<br> присыпкой из белого шоколада</h3>
         </a>
         <span class="price">355 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
         <img src="img/bestseler-3.png" width="267" height="267" alt="Сливочно-клубничное мороженное с присыпкой из белого шоколада">
       </article>
-      <article class="bestseller">
+
+      <article class="catalog-item bestseller">
         <a href="#">
           <h3>Сливочное крем-брюле с карамельной подливкой</h3>
         </a>
@@ -148,6 +158,7 @@
         <img src="img/bestseler-4.png" width="267" height="267" alt="Сливочное мороженное крем-брюле с карамельной подливкой">
       </article>
     </section>
+
     <section class="information">
       <h2>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
       <p class="production">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
@@ -165,7 +176,8 @@
         <div class="subscription-wrap">
           <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
           <form class="subscription-form" action="index.html" method="post">
-            <input type="email" name="user-email" placeholder="email@example.com">
+            <label class="visually-hidden" for="user-email">Ваш электронный адрес</label>
+            <input type="email" id="user-email" name="user-email" placeholder="email@example.com">
             <button type="submit" class="content-button">Отправить</button>
           </form>
         </div>
@@ -213,8 +225,10 @@
       </button>
       <h3>Мы обязательно вам ответим!</h3>
       <form class="feedback-form" action="echo/htmlacademy.ru" method="post">
-        <input type="text" name="user-name" placeholder="Имя Фамилия" aria-label="введите имя и фамилию">
-        <input type="email" name="user-email" placeholder="email@example.com" aria-label="введите ваш электронный адрес">
+        <label class="visually-hidden" for="user-name">Ваше имя и фамилия</label>
+        <input type="text" id="user-name" name="user-name" placeholder="Имя Фамилия" aria-label="введите имя и фамилию">
+        <label class="visually-hidden" for="feedback-email">Ваш электронный адрес для подписки</label>
+        <input type="email" id="feedback-email" name="feedback-email" placeholder="email@example.com" aria-label="введите ваш электронный адрес">
         <textarea name="user-message" rows="8" cols="80" placeholder="В свободной форме" aria-label="введите ваше сообщение"></textarea>
         <button type="submit" class="content-button">Отправить</button>
       </form>
