--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
 
     <section class="main-slider">
       <h2 class="visually-hidden">Акции недели</h2>
-      <div class="slide slide-1 ">
+      <div class="slide slide-1 active">
         <img src="img/ice-creame.png" width="1045" height="881" alt="Два рожка с мороженым">
         <p class="slider-title">Крем-брюле и пломбир <span>с малиновым джемом</span></p>
         <a href="#" type="button" class="content-button slider-button">Давайте оба!</a>
       </div>
-      <div class="slide slide-2 active">
+      <div class="slide slide-2">
         <img src="img/ice-creame-2.png" width="1045" height="843" alt="Два рожка с мороженым">
         <p class="slider-title">Шоколадный пломбир и лимонный сорбет</p>
         <a href="#" type="button" class="content-button slider-button">Давайте оба!</a>
@@ -185,21 +185,24 @@
           </form>
         </div>
       </section>
+
     </div>
   </div>
   <section class="map">
     <h2 class="visually-hidden">Карта и контакты</h2>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533216!2d30.320858716342318!3d59.93871648187625!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2spl!4v1583690243054!5m2!1sru!2spl" width="100%" height="430" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-    <div class="contacts">
-      <p>Адрес главного офиса<br> и офлайн-магазина:</p>
-      <address>ул. Большая Конюшенная 19/8, Санкт-Петербург</address>
-      <p>
-        Для заказов по телефону:
-        <a href="tel:+88124502525">8 812 450-25-25</a>
-        (с 10 до 20 ежедневно)
-      </p>
-      <button type="button" class="content-button feedback-button">Форма обратной связи</button>
+    <div class="contacts-wrap">
+      <div class="contacts">
+        <p>Адрес главного офиса<br> и офлайн-магазина:</p>
+        <address>ул. Большая Конюшенная 19/8, Санкт-Петербург</address>
+        <p>
+          Для заказов по телефону:
+          <a href="tel:+88124502525">8 812 450-25-25</a>
+          (с 10 до 20 ежедневно)
+        </p>
+        <button type="button" class="content-button feedback-button">Форма обратной связи</button>
+      </div>
     </div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533216!2d30.320858716342318!3d59.93871648187625!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2spl!4v1583690243054!5m2!1sru!2spl" width="100%" height="430" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
   </section>
   <footer class="footer">
     <ul class="social-links">
