--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="drop-menu-wrapper">
               <ul class="drop-menu">
                 <li><a href="#">Новинки</a></li>
-                <li><a href="#">Сливочное</a></li>
+                <li><a href="catalog.html">Сливочное</a></li>
                 <li><a href="#">Щербеты</a></li>
                 <li><a href="#">Фруктовый лед</a></li>
                 <li><a href="#">Мелорин</a></li>
@@ -221,7 +221,7 @@
         <li><a href="#">Экогологические стандарты</a></li>
       </ul>
     </div>
-    <p class="copyright">Сделано в <a href="#">HTML Academy</a> © 2019</p>
+    <p class="copyright">Сделано в <a href="https://up.htmlacademy.ru/htmlcss/27">HTML Academy</a> © 2019</p>
   </footer>
   <div class="feedback-wrapper">
     <section class="feedback-popup">
