--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
           </a>
           <ul class="site-navigation">
             <li>
-              <a href="#" class="drop-menu-link">Каталог</a>
+              <a href="#" class="drop-menu-link active-page">Каталог</a>
               <div class="drop-menu-wrapper">
                 <ul class="drop-menu">
                   <li><a href="#">Новинки</a></li>
@@ -75,7 +75,24 @@
             2 товара
           </a>
           <div class="header-basket">
-            
+            <div class="header-basket-wrapper">
+              <article class="basket-item">
+                <button type="button"><span class="visually-hidden">Удалить товар из корзины</span></button>
+                <img src="img/item-1.png" width="33" height="33" alt="Сливочное мороженное с апельсиновым джемом и цитрусовой стружкой">
+                <p class="basket-item-title">Пломбир с апельсиновым джемом</p>
+                <p class="basket-item-description">1,5 кг х <span class="price">200 руб.</span></p>
+                <p class="basket-item-price">300 руб.</p>
+              </article>
+              <article class="basket-item">
+                <button type="button"><span class="visually-hidden">Удалить товар из корзины</span></button>
+                <img src="img/item-3.png" width="33" height="33" alt="Сливочное мороженное с апельсиновым джемом и цитрусовой стружкой">
+                <p class="basket-item-title">Пломбир с апельсиновым джемом</p>
+                <p class="basket-item-description">1,5 кг х <span class="price">200 руб.</span></p>
+                <p class="basket-item-price">300 руб.</p>
+              </article>
+              <p class="basket-total-price">Итого: 750 руб.</p>
+              <a href="#" class="content-button basket-link">Оформить заказ</a>
+            </div>
           </div>
         </nav>
         <p class="work-hours">C 10 до 20, ежедневно <br><a href="tel:+88124502525">8 812 450-25-25</a></p>
@@ -165,6 +182,127 @@
           <button type="submit">Применить</button>
         </fieldset>
       </form>
+      <section class="catalog-items">
+        <h2 class="visually-hidden">Товары магазина</h2>
+        <article class="catalog-item">
+          <a href="#">
+            <h3>Сливочное с апельсиновым<br> джемом и цитрусовой стружкой</h3>
+          </a>
+          <span class="price">310 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
+          <img src="img/item-1.png" width="267" height="267" alt="Сливочное мороженное с апельсиновым джемом и цитрусовой стружкой">
+          <a href="#" class="content-button item-link">Быстрый просмотр</a>
+        </article>
+
+        <article class="catalog-item">
+          <a href="#">
+            <h3>Сливочно-кофейное с кусочками шоколада</h3>
+          </a>
+          <span class="price">380 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
+          <img src="img/item-2.png" width="267" height="267" alt="Сливочно-кофейное мороженное с кусочками шоколада">
+          <a href="#" class="content-button item-link">Быстрый просмотр</a>
+        </article>
+
+        <article class="catalog-item">
+          <a href="#">
+            <h3>Сливочно-клубничное с<br> присыпкой из белого шоколада</h3>
+          </a>
+          <span class="price">355 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
+          <img src="img/item-3.png" width="267" height="267" alt="Сливочно-клубничное мороженное с присыпкой из белого шоколада">
+          <a href="#" class="content-button item-link">Быстрый просмотр</a>
+        </article>
+
+        <article class="catalog-item">
+          <a href="#">
+            <h3>Сливочное крем-брюле с карамельной подливкой</h3>
+          </a>
+          <span class="price">415 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
+          <img src="img/item-4.png" width="267" height="267" alt="Сливочное мороженное крем-брюле с карамельной подливкой">
+          <a href="#" class="content-button item-link">Быстрый просмотр</a>
+        </article>
+
+        <article class="catalog-item">
+          <a href="#">
+            <h3>Сливочное с брусничным джемом</h3>
+          </a>
+          <span class="price">325 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
+          <img src="img/item-5.png" width="267" height="267" alt="Сливочное мороженное с брусничным джемом">
+          <a href="#" class="content-button item-link">Быстрый просмотр</a>
+        </article>
+
+        <article class="catalog-item">
+          <a href="#">
+            <h3>Сливочно-черничное с цельными ягодами черники </h3>
+          </a>
+          <span class="price">410 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
+          <img src="img/item-6.png" width="267" height="267" alt="Сливочно-черничное мороженное с цельными ягодами черники">
+          <a href="#" class="content-button item-link">Быстрый просмотр</a>
+        </article>
+
+        <article class="catalog-item">
+          <a href="#">
+            <h3>Сливочно-лимонное с карамельной присыпкой</h3>
+          </a>
+          <span class="price">375 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
+          <img src="img/item-7.png" width="267" height="267" alt="Сливочно-лимонное мороженное с карамельной присыпкой">
+          <a href="#" class="content-button item-link">Быстрый просмотр</a>
+        </article>
+
+        <article class="catalog-item">
+          <a href="#">
+            <h3>Сливочное с шоколадной стружкой</h3>
+          </a>
+          <span class="price">320 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
+          <img src="img/item-8.png" width="267" height="267" alt="Сливочное мороженное с шоколадной стружкой">
+          <a href="#" class="content-button item-link">Быстрый просмотр</a>
+        </article>
+
+        <article class="catalog-item">
+          <a href="#">
+            <h3>Сливочно-ванильное с кусочками шоколада</h3>
+          </a>
+          <span class="price">440 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
+          <img src="img/item-9.png" width="267" height="267" alt="Сливочно-ванильное мороженное с кусочками шоколада">
+          <a href="#" class="content-button item-link">Быстрый просмотр</a>
+        </article>
+
+        <article class="catalog-item">
+          <a href="#">
+            <h3>Сливочноe с ментоловым сиропом</h3>
+          </a>
+          <span class="price">435 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
+          <img src="img/item-10.png" width="267" height="267" alt="Сливочное мороженное с ментоловым сиропом">
+          <a href="#" class="content-button item-link">Быстрый просмотр</a>
+        </article>
+
+        <article class="catalog-item">
+          <a href="#">
+            <h3>Сливочное с кусочками черного шоколада</h3>
+          </a>
+          <span class="price">355 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
+          <img src="img/item-11.png" width="267" height="267" alt="Сливочное мороженное с кусочками черного шоколада">
+          <a href="#" class="content-button item-link">Быстрый просмотр</a>
+        </article>
+
+        <article class="catalog-item">
+          <a href="#">
+            <h3>Сливочное с мятным сиропом</h3>
+          </a>
+          <span class="price">420 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
+          <img src="img/item-12.png" width="267" height="267" alt="Сливочное мороженное с мятным сиропом">
+          <a href="#" class="content-button item-link">Быстрый просмотр</a>
+        </article>
+      </section>
+      <div class="page-navigation">
+        <ul class="page-list">
+          <li><a href="#" class="back-link"><span class="visually-hidden">Назад</span></a></li>
+          <li><a href="#" class="current-page">1</a></li>
+          <li><a href="#">2</a></li>
+          <li><a href="#">3</a></li>
+          <li><a href="#">4</a></li>
+          <li><a href="#">5</a></li>
+          <li><a href="#" class="forward-link"><span class="visually-hidden">Вперед</span></a></li>
+        </ul>
+      </div>
     </main>
 
     <footer class="footer">
