--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <h3>Сливочное с апельсиновым<br> джемом и цитрусовой стружкой</h3>
         </a>
         <span class="price">310 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
-        <img src="img/bestseler-1.png" width="267" height="267" alt="Сливочное мороженное с апельсиновым джемом и цитрусовой стружкой">
+        <img src="img/item-1.png" width="267" height="267" alt="Сливочное мороженное с апельсиновым джемом и цитрусовой стружкой">
         <a href="#" class="content-button item-link">Быстрый просмотр</a>
       </article>
 
@@ -139,7 +139,7 @@
           <h3>Сливочно-кофейное с кусочками шоколада</h3>
         </a>
         <span class="price">380 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
-        <img src="img/bestseler-2.png" width="267" height="267" alt="Сливочно-кофейное мороженное с кусочками шоколада">
+        <img src="img/item-2.png" width="267" height="267" alt="Сливочно-кофейное мороженное с кусочками шоколада">
         <a href="#" class="content-button item-link">Быстрый просмотр</a>
       </article>
 
@@ -148,7 +148,7 @@
           <h3>Сливочно-клубничное с<br> присыпкой из белого шоколада</h3>
         </a>
         <span class="price">355 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
-        <img src="img/bestseler-3.png" width="267" height="267" alt="Сливочно-клубничное мороженное с присыпкой из белого шоколада">
+        <img src="img/item-3.png" width="267" height="267" alt="Сливочно-клубничное мороженное с присыпкой из белого шоколада">
         <a href="#" class="content-button item-link">Быстрый просмотр</a>
       </article>
 
@@ -157,7 +157,7 @@
           <h3>Сливочное крем-брюле с карамельной подливкой</h3>
         </a>
         <span class="price">415 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
-        <img src="img/bestseler-4.png" width="267" height="267" alt="Сливочное мороженное крем-брюле с карамельной подливкой">
+        <img src="img/item-4.png" width="267" height="267" alt="Сливочное мороженное крем-брюле с карамельной подливкой">
         <a href="#" class="content-button item-link">Быстрый просмотр</a>
       </article>
     </section>
