--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Gllasy Shop</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/normalize.min.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="body-slide-1">
   <h1 class="visually-hidden">Магазин мороженного "Глейси"</h1>
@@ -240,7 +240,7 @@
       </form>
     </section>
   </div>
-  <script src="js/main-slider.js"></script>
-  <script src="js/feedback-modal.js"></script>
+  <script src="js/main-slider.min.js"></script>
+  <script src="js/feedback-modal.min.js"></script>
 </body>
 </html>
